<resources>
    <string name="app_name">CalculatorAppJoshGrainge</string>
    <!-- Text for numbers -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!-- Text for special function buttons -->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="decimal">.</string>
    <string name="absolute">|x|</string>
    <string name="factorial">!</string>
    <string name="modulo">%</string>
    <string name="exponent">^2</string>
    <string name="equals">=</string>
    <string name="clear">clear</string>



</resources>