<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!-- Calculator layout with buttons for 0-9, decimal, minus, plus, multiply, divide, pow 2,
         modulo, factorial, absolute, clear, and equals. That additionally has 2 text views for
         the current equation and above that the previous equation-->

    <!-- "Screen" text views -->
    <TextView
        android:id="@+id/old_equation"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textAlignment="textEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp" />
    <TextView
        android:id="@+id/screen_text"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="textEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/old_equation"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"/>

    <!-- Clear button -->
    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/clear_color"
        android:text="@string/clear"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/table_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <!-- 4x4 table of buttons -->
    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/absolute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/symbol_buttons"
                android:text="@string/absolute"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/factorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/symbol_buttons"
                android:text="@string/factorial"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/modulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/symbol_buttons"
                android:text="@string/modulo"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/exponent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/symbol_buttons"
                android:text="@string/exponent"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/number_buttons"
                android:text="@string/one"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/number_buttons"
                android:text="@string/two"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/number_buttons"
                android:text="@string/three"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/symbol_buttons"
                android:text="@string/divide"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/number_buttons"
                android:text="@string/four"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/num5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/number_buttons"
                android:text="@string/five"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/num6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/number_buttons"
                android:text="@string/six"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/symbol_buttons"
                android:text="@string/multiply"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/num7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/number_buttons"
                android:text="@string/seven"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/num8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/number_buttons"
                android:text="@string/eight"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/num9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/number_buttons"
                android:text="@string/nine"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/symbol_buttons"
                android:text="@string/minus"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/symbol_buttons"
                android:text="@string/decimal"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/num0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/number_buttons"
                android:text="@string/zero"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/equal_color"
                android:text="@string/equals"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/symbol_buttons"
                android:text="@string/plus"
                android:textColor="@color/black" />
        </TableRow>

    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>